syntax = "proto3";

option csharp_namespace = "Microservice.DashboardManager";

package productProto;

service ProductService {
  rpc GetProducts (ProductRequest) returns (stream ProductReply);
  rpc GetProductByModelId (GetProductByModelIdRequest) returns (GetProductByModelIdReply);
  rpc GetProductHistoryByModelId (GetProductHistoryByModelIdRequest) returns (stream GetProductHistoryByModelIdReply);
}

message ProductRequest {
}
message ProductReply {
   repeated ProductProto products = 1;
}

message ProductProto {
  int32 id = 1;
  string name = 2;
  string code = 3;
  string currentPrice = 4; 
}

message GetProductByModelIdRequest {
	int32 modelId = 1;
}
message GetProductByModelIdReply {
   string name = 1;
}

message GetProductHistoryByModelIdRequest {
	int32 modelId = 1;
}

message GetProductHistoryByModelIdReply {
   repeated ProductHistoryProto productHistories = 1;
}

message ProductHistoryProto {
    int32 id = 1;
    string price = 2;
    string date = 3;
}
